--- a/Group9/Views/Components/StoreCollectionCell.xib
+++ b/Group9/Views/Components/StoreCollectionCell.xib
@@ -39,7 +39,7 @@
                                 <color key="textColor" red="0.49019607843137253" green="0.52941176470588236" blue="0.52156862745098043" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Closed, open in 20 minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raj-UK-a4C">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Closed, open in 20 minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raj-UK-a4C">
                                 <rect key="frame" x="0.0" y="192.5" width="215" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.49019607840000001" green="0.52941176469999995" blue="0.52156862749999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
